Fix info-card alignment to support 1-line subtext

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ img {
 .info-container {
     display: flex;
     justify-content: space-around;
+    align-items: start;
     width: 60%;
     gap: 40px;
 }
